Update Analiza danych w Pythonie.ipynb

--- a/Analiza danych w Pythonie.ipynb
+++ b/Analiza danych w Pythonie.ipynb
@@ -25,7 +25,7 @@
         "\n",
         "Oblicz podstawowe statystyki dla nowoutworzonych kolumn i porównaj dla każdej DF\n",
         "\n",
-        "Stwórz kartogramy dla każdej GDF i kolumn z pkt.1 (użyj np. biblioteki mapclassify - !pip install mapclassify)\n",
+        "Stwórz kartogramy dla każdej GDF i kolumn z pkt.1 \n",
         "\n"
       ],
       "metadata": {
